# policyexplorer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
policyexplorer/: common.py  condition.py  effect.py  exception.py  operator.py  permission.py  permission_table.py  policy.py  principal.py  request_context.py  statement.py
tests/policyexplorer/: test_common.py  test_condition.py  test_condition_item.py  test_kms_cmk_policy_parsing.py  test_permission.py  test_permission_table.py  test_policy.py  test_principal.py  test_statement.py
tests/policyexplorer/resources/: kms-cmk-resource-policy.json
