[project]
name = "policyexplorer"
version = "0.1.0"
description = "An AWS IAM policy document parser"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
license = { text = "Apache-2.0" }
keywords = [ "aws", "iam", "parser" ]

[project.urls]
homepage = "https://github.com/hmrc/policyexplorer"
repository = "https://github.com/hmrc/policyexplorer"
documentation = "https://github.com/hmrc/policyexplorer"
"Bug Tracker" = "https://github.com/hmrc/policyexplorer/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
bandit = "^1.8.3"
